--- a/configs/ptb.ini
+++ b/configs/ptb.ini
@@ -1,5 +1,5 @@
 [Data]
-pretrained_embeddings_file = data/glove/glove.6B.100d.txt
+pretrained_embeddings_file = data/embedding/glove.6B.100d.txt
 data_dir = data/ptb
 train_file = %(data_dir)s/train.conllx
 dev_file = %(data_dir)s/dev.conllx
@@ -13,7 +13,7 @@ save_model_path = %(save_dir)s/model
 save_vocab_path = %(save_dir)s/vocab
 load_dir = result/ptb
 load_model_path = %(load_dir)s/model
-load_vocab_path = %(load_dir)s/vocab 
+load_vocab_path = %(load_dir)s/vocab
 
 [Network]
 lstm_layers = 3
