--- a/configs/ptb-debug.ini
+++ b/configs/ptb-debug.ini
@@ -1,5 +1,5 @@
 [Data]
-pretrained_embeddings_file = data/glove/glove.6B.100d.debug.txt
+pretrained_embeddings_file = data/embedding/glove.6B.100d.debug.txt
 data_dir = data/ptb
 train_file = %(data_dir)s/train-debug.conllx
 dev_file = %(data_dir)s/dev-debug.conllx
@@ -7,7 +7,7 @@ test_file = %(data_dir)s/test-debug.conllx
 min_occur_count = 2
 
 [Save]
-save_dir = result/ptb
+save_dir = result/ptb-debug
 config_file = %(save_dir)s/config.ini
 save_model_path = %(save_dir)s/model
 save_vocab_path = %(save_dir)s/vocab
