--- a/configs/ptb-no-dropout.ini
+++ b/configs/ptb-no-dropout.ini
@@ -1,7 +1,7 @@
 [Data]
 pretrained_embeddings_file = data/embedding/glove.6B.100d.txt
 data_dir = data/ptb
-train_file = %(data_dir)s/train.conllx
+train_file = %(data_dir)s/dev.conllx
 dev_file = %(data_dir)s/dev.conllx
 test_file = %(data_dir)s/test.conllx
 min_occur_count = 2
